# TCPLib

./: README.md  Test.ps1  build.ps1  build_and_test.ps1  client.py  pyproject.toml  scratch.py  server.py  server_interface.py  test.ps1
Documentation/: docs.md
dev_tools/: client.py  server.py  server_interface.py
src/TCPLib/: TCPClient.py  TCPServer.py  active_client.py  auto_tcp_client.py  client_processor.py  message.py  msg_flags.py  passive_client.py  tcp_client.py  tcp_server.py  utils.py
src/TCPLib/internals/: client_processor.py  listener.py  message.py  tcp_obj.py  utils.py
src/TCPLib/logger/: logger.py
src/dev_tools/: client.py  logger.py  server.py  server_interface.py
tests/: conftest.py  fixtures.py  globals_for_tests.py  test_client_mgmt.py  test_lib_state.py  test_send_recv.py  test_utils.py
