[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TCP-Lib"
version = "1.0.1"
authors = [
  { name="Joshua Kitchen"},
]
description = "A basic library for implementing a TCP client/server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kitchej/TCPLib"
Issues = "https://github.com/kitchej/TCPLib/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-x"